--- a/Source/DragonEngine/DragonEngine.vbproj
+++ b/Source/DragonEngine/DragonEngine.vbproj
@@ -95,6 +95,15 @@
     <Compile Include="GamePart.vb" />
     <Compile Include="GameProperties.vb" />
     <Compile Include="KeyManager.vb" />
+    <Compile Include="MapEditor.Designer.vb">
+      <DependentUpon>MapEditor.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MapEditor.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MovableImage.vb">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PhysicsObject.vb" />
     <Compile Include="RenderedObject.vb" />
     <Compile Include="SimpleImageEditor.Designer.vb">
@@ -131,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GameClient.resx">
       <DependentUpon>GameClient.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MapEditor.resx">
+      <DependentUpon>MapEditor.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SimpleImageEditor.resx">
       <DependentUpon>SimpleImageEditor.vb</DependentUpon>
