--- a/Source/DragonEngine/DragonEngine.vbproj
+++ b/Source/DragonEngine/DragonEngine.vbproj
@@ -77,13 +77,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.vb" />
-    <Compile Include="DrawCall.vb" />
     <Compile Include="GameEditor.Designer.vb">
       <DependentUpon>GameEditor.vb</DependentUpon>
     </Compile>
     <Compile Include="GameEditor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Globals.vb" />
     <Compile Include="IDataExchange.vb" />
     <Compile Include="GameClient.Designer.vb">
       <DependentUpon>GameClient.vb</DependentUpon>
@@ -92,8 +92,11 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GameProperties.vb" />
+    <Compile Include="IListable.vb" />
+    <Compile Include="IRender.vb" />
     <Compile Include="ITickable.vb" />
     <Compile Include="KeyManager.vb" />
+    <Compile Include="Level.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
