--- a/Source/DragonEngine/DragonEngine.vbproj
+++ b/Source/DragonEngine/DragonEngine.vbproj
@@ -77,6 +77,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.vb" />
     <Compile Include="Animation.vb" />
     <Compile Include="AnimationDisplay.Designer.vb">
       <DependentUpon>AnimationDisplay.vb</DependentUpon>
@@ -102,6 +103,7 @@
     <Compile Include="GameWindow.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ICollision.vb" />
     <Compile Include="IDrawing.vb" />
     <Compile Include="IListIcon.vb" />
     <Compile Include="Image.vb" />
@@ -111,6 +113,7 @@
     <Compile Include="ITickable.vb" />
     <Compile Include="JsonData.vb" />
     <Compile Include="Keyboard.vb" />
+    <Compile Include="Messaging.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -132,7 +135,6 @@
     <Compile Include="ObjectBrowserWindow.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ObjectLoader.vb" />
     <Compile Include="ObjectLookupTable.vb" />
     <Compile Include="Package.vb" />
     <Compile Include="PhysicsObject.vb" />
